<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff0">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="vertical">
        <TextView 
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="#00008b"
            android:textSize="30sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="95sp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ename"
                android:hint="@string/edname"
                android:inputType="textCapWords"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15sp">
            <TextView
                android:layout_width="95sp"
                android:layout_height="wrap_content"
                android:text="@string/lname"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/elname"
                android:hint="@string/edlname"
                android:inputType="textCapWords"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="95sp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eid"
                android:hint="@string/edid"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="95sp"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="15sp"
                android:layout_gravity="center"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rgsex"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbf"
                    android:text="@string/fem"
                    android:textSize="15sp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbm"
                    android:text="@string/masc"
                    android:textSize="15sp"/>
            </RadioGroup>

        </LinearLayout>
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">-->
            <DatePicker
                android:layout_width="250sp"
                android:layout_height="110sp"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:endYear="2014"
                android:id="@+id/dpdate">
            </DatePicker>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:scrollbarSize="30sp"
                android:spinnerMode="dropdown"
                android:id="@+id/spcity">

            </Spinner>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbhob1"
                    android:text="@string/hob1"
                    android:textSize="18sp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbhob2"
                        android:text="@string/hob2"
                        android:textSize="18sp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbhob3"
                        android:text="@string/hob3"
                        android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbhob4"
                    android:text="@string/hob4"
                    android:textSize="18sp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbhob5"
                    android:text="@string/hob5"
                    android:textSize="18sp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbhob6"
                    android:text="@string/hob6"
                    android:textSize="18sp"/>
            </LinearLayout>
            <!--
        </LinearLayout>-->

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/bshow"
            android:text="@string/show"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">
        <TextView
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshname"
            android:text="name"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshlname"
            android:text="last name"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshid"
            android:text="identification"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshgend"
            android:text="gender"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshbirth"
            android:text="Birthdate"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshcity"
            android:text="City"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tshhob"
            android:text="hobbies"
            android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>
